syntax = "proto3";

message _RawTransaction {
  string hash                           = 1;  // hash: DATA, 32 Bytes - hash of the transaction.
  string from                           = 2;  // from: DATA, 20 Bytes - address of the sender.
  optional string to                    = 3;  // to: DATA, 20 Bytes - address of the receiver. null when its a contract creation transaction.
  string value                          = 4;  // value: QUANTITY - value transferred in Wei.
  string input                          = 5;  // input: DATA - the data send along with the transaction.
  string nonce                          = 6;  // nonce: QUANTITY - the number of transactions made by the sender prior to this one.
  string gas                            = 7;  // gas: QUANTITY - gas provided by the sender.
  string gasPrice                       = 8;  // gasPrice: QUANTITY - gas price provided by the sender in Wei.
  optional string blockNumber           = 9;  // blockNumber: QUANTITY - block number where this transaction was in. null when its pending.
  optional string maxFeePerGas          = 10; // maxFeePerGas: QUANTITY - maxFeePerGas provided by the sender.
  optional string maxPriorityFeePerGas  = 11; // maxPriorityFeePerGas: QUANTITY - maxPriorityFeePerGas provided by the sender.
}
